--- a/_posts/2020-01-05-2019-books.markdown
+++ b/_posts/2020-01-05-2019-books.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "My 2019 Climate Change Books"
+title:  "My 2019 Climate Change Book Recommendations"
 date:   2020-01-05 10:18:00
 categories:
 ---
@@ -11,15 +11,17 @@ In 2019 I decided to focus my reading on climate change and the environment more
 In The Uninhabitable Earth, Dave Wallace-Wells outlines the challenging realities for almost every aspect of our lives. This book was fact-filled and did a good job of articulating what scientists have been struggling to communicate to the general public for decades. This is the book the kicked off my year and inspired me to learn more about climate change and our environment for the rest of 2019.
 
 ### Climate: A New Story
-Climate - A New Story focuses on how to discuss the issue of climate change with everyone and 
+Climate - A New Story focuses on how to address the challenges of climate change from a ecology perspective. Charles Eisenstein drives home belief that we need to restore natural ecosystems and appreciate them for what they are to gain enough political support to effect meaningful change.
 
-### Project Drawdown
+### Drawdown: The Most Comprehensive Plan Ever Proposed to Reverse Global Warming
 
 
 ### The Water Will Come
+The Water Will Come is a book that focuses specifically on the impacts of sea-level rise around the world. The book starts off with a science-based explanation of why sea levels will rise and by how much. Jeff Goodell then reviews several cities around the world, with a focus on Miami and how they are addressing cliamate change (hint: they're not doing enough). 
 
 
 ### The Fate of Food
+
 
 
 ### IPCC Reports & Others
@@ -28,4 +30,4 @@ Climate Change is happening in real-time and the science is constantly evolving.
 - [IPCC Special Report: The Ocean and Cryosphere in a Changing Climate](https://www.ipcc.ch/srocc/)
 - [IPCC Special Report: IPCC Special Report: Climate Change and Land](https://www.ipcc.ch/srccl/)
 
-In 2020 I'm continuing to read more about climate change with a focus on geo-engineering, climate diplomacy and the impacts of landuse on C02. I'll follow up next year with a highlight reel of 2020's books!
+In 2020 I will continue to read more about climate change with a focus on geo-engineering and climate diplomacy. I'll follow up next year with a highlight reel of 2020's books!
