--- a/_posts/2020-01-05-2019-books.markdown
+++ b/_posts/2020-01-05-2019-books.markdown
@@ -5,7 +5,7 @@ date:   2020-01-05 10:18:00
 categories:
 ---
 
-In 2019 I decided to focus my reading on climate change and the environment more broadly. I started the year off with a broad book that discussed climate change and its impacts. From there, I began going deeper on specific areas such as climate change's impact on food and sea level rise. Now, onto my list of 2019 climate change book recommendations..
+In 2019 I decided to focus my reading on climate change and the environment more broadly. I started the year off with a book that discussed climate change and its high-level impacts on earth's ecosystems. From there, I began going deeper on specific areas such as climate change's impact on food and sea level rise.
 
 ### The Uninhabitable Earth - Life After Warming
 In The Uninhabitable Earth, Dave Wallace-Wells outlines the challenging realities for almost every aspect of our lives. This book was fact-filled and did a good job of articulating what scientists have been struggling to communicate to the general public for decades. This is the book the kicked off my year and inspired me to learn more about climate change and our environment for the rest of 2019.
@@ -32,8 +32,8 @@ As a recent convert to a plant-based diet, I thoroughly enjoyed The Fate of Food
 
 [Amazon](https://www.amazon.com/Fate-Food-Bigger-Hotter-Smarter-ebook/dp/B07H722YDQ) / [Goodreads](https://www.goodreads.com/en/book/show/41882450-the-fate-of-food)
 
-### IPCC Reports & Others
-Climate Change is happening in real-time and the science is constantly evolving. Reading reports from the IPCC and other organizations is becoming the fastest and most efficient way to learn about the current impact we're having on our environment. In 2019, several reports were released that are worth reading:
+### IPCC Reports
+Climate Change is happening in real-time and the science is constantly evolving. Reading reports from the IPCC and other organizations is becoming the fastest and most efficient way to learn about the impact we're having on our environment in real-time. In 2019, several reports were released that are worth reading:
 
 - [IPCC Special Report: The Ocean and Cryosphere in a Changing Climate](https://www.ipcc.ch/srocc/)
 - [IPCC Special Report: IPCC Special Report: Climate Change and Land](https://www.ipcc.ch/srccl/)
