--- a/_posts/2020-01-05-2019-books.markdown
+++ b/_posts/2020-01-05-2019-books.markdown
@@ -5,7 +5,9 @@ date:   2020-01-05 10:18:00
 categories:
 ---
 
-In 2019 I decided to focus my reading on climate change and the environment more broadly. I started the year off with a book that discussed climate change and its high-level impacts on earth's ecosystems. From there, I began going deeper on specific areas such as climate change's impact on food and sea level rise.
+In 2019 I decided to focus my reading on climate change and the environment more broadly. I started the year off with a book that discussed climate change and its high-level impacts on earth's ecosystems. From there, I began going deeper on specific areas such as climate change's impact on food and sea level rise. 
+
+If you're interested in learning more about climate change and potentially solutions, I'd recommend starting with the books listed below!
 
 ### The Uninhabitable Earth - Life After Warming
 In The Uninhabitable Earth, Dave Wallace-Wells outlines the challenging realities for almost every aspect of our lives. This book was fact-filled and did a good job of articulating what scientists have been struggling to communicate to the general public for decades. This is the book the kicked off my year and inspired me to learn more about climate change and our environment for the rest of 2019.
