--- a/_posts/2020-01-05-2019-books.markdown
+++ b/_posts/2020-01-05-2019-books.markdown
@@ -7,7 +7,7 @@ categories:
 
 In 2019 I decided to focus my reading on climate change and the environment more broadly. I started the year off with a book that discussed climate change and its high-level impacts on earth's ecosystems. From there, I began going deeper on specific areas such as climate change's impact on food and sea level rise. 
 
-If you're interested in learning more about climate change and potentially solutions, I'd recommend starting with the books listed below!
+If you're interested in learning more about climate change and potential solutions, I'd recommend starting with the books listed below!
 
 ### The Uninhabitable Earth - Life After Warming
 In The Uninhabitable Earth, Dave Wallace-Wells outlines the challenges posed by climate change in almost every aspect of our lives. This book was fact-filled and did a good job of articulating what scientists have been struggling to communicate to the general public for decades. This is the book that kicked off my year and inspired me to focus on climate change in 2019.
@@ -15,12 +15,12 @@ In The Uninhabitable Earth, Dave Wallace-Wells outlines the challenges posed by 
 [Amazon](https://www.amazon.com/Uninhabitable-Earth-Life-After-Warming/dp/0525576703/) / [Goodreads](https://www.goodreads.com/book/show/41552709-the-uninhabitable-earth?ac=1&from_search=true&qid=7fnpnUFOK6&rank=1)
 
 ### Climate: A New Story
-Climate - A New Story focuses on how to address the challenges of climate change from an ecology perspective. Charles Eisenstein drives home belief that we need to restore natural ecosystems and appreciate them for what they are to gain enough political support to effect meaningful change.
+Climate - A New Story focuses on how to address the challenges of climate change from an ecology perspective. Charles Eisenstein drives home the belief that we need to restore natural ecosystems and appreciate them for what they are to gain enough political support to effect meaningful change.
 
 [Amazon](https://www.amazon.com/Climate-New-Story-Charles-Eisenstein/dp/1623172489) / [Goodreads](https://www.goodreads.com/book/show/39849661-climate?ac=1&from_search=true&qid=e3anRj0sUT&rank=1)
 
 ### Drawdown: The Most Comprehensive Plan Ever Proposed to Reverse Global Warming
-Drawdown is one of the most inspiring books on the list. Drawdown provides a list of solutions to climate change that exist *today*. Many of the solutions on the list aren't intuitive but they detail their rational which flips a lot of our conventional climate change solution-thinking on its head.
+Drawdown is one of the most inspiring books on the list. Drawdown provides a list of solutions to climate change that exist *today*. Many of the solutions on the list aren't intuitive but they detail their rationale which flips a lot of our conventional climate change solution-thinking on its head.
 
 [Amazon](https://www.amazon.com/Drawdown-Comprehensive-Proposed-Reverse-Warming/dp/0143130447) / [Goodreads](https://www.goodreads.com/book/show/31624481-drawdown?ac=1&from_search=true&qid=Q18vqZslhg&rank=2)
 
@@ -30,7 +30,7 @@ The Water Will Come is a book that focuses specifically on the impacts of sea-le
 [Amazon](https://www.amazon.com/Water-Will-Come-Remaking-Civilized/dp/0316260207) / [Goodreads](https://www.goodreads.com/book/show/34523152-the-water-will-come?ac=1&from_search=true&qid=9A81yxDBI3&rank=1)
 
 ### The Fate of Food: What We'll Eat in a Bigger, Hotter, Smarter World
-This book goes into depth on the challenges the agiruclture industry is facing with warming temperatures, less predictable weather patterns, less rain and water shortages. The second half of the book covers solutions to many of these challenges including cell and plant-based meat, genetically modified seeds, farm automation, cloud seeding and aquaculture.
+This book goes into depth on the challenges the agriculture industry is facing with warming temperatures, less predictable weather patterns, less rain and water shortages. The second half of the book covers solutions to many of these challenges including cell and plant-based meat, genetically modified seeds, farm automation, cloud seeding and aquaculture.
 
 [Amazon](https://www.amazon.com/Fate-Food-Bigger-Hotter-Smarter-ebook/dp/B07H722YDQ) / [Goodreads](https://www.goodreads.com/en/book/show/41882450-the-fate-of-food)
 
